--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
     <!--Right sidebar user-->
     <ul class="nav navbar-nav navbar-right" [hidden]="global.globalvars.account_logged_in == null">
       <li [ngClass]="{'active': global.globalvars.current_component == 'newitem'}">
-        <a (click)="newitem()" class="btn"><span class="glyphicon glyphicon-plus"></span> New item</a></li>
+        <a (click)="newitem()" class="btn"><span class="glyphicon glyphicon-plus"></span> Post advertisement</a></li>
       <li class="dropdown" [ngClass]="{'active': global.globalvars.current_component == 'itemmanager'}">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-list"></span> Item manager <span class="caret"></span></a>
         <ul class="dropdown-menu">
