--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -6,18 +6,18 @@
       <!--Item title, creation details, picture and description-->
       <div class="row">
         <div class="col-lg-12">
-          <div class="alert alert-info">
-            <h3><span class="glyphicon glyphicon-tags"></span> <strong> {{item_item_params?.title}}</strong></h3>
+          <div class="alert alert-info item-header">
+            <h3><strong> {{item_item_params?.title}}</strong></h3>
             <span class="glyphicon glyphicon-link"></span> {{item_agreement_params?.agreement_id}}&nbsp;
             <span class="glyphicon glyphicon-time"></span> {{item_agreement_params?.date_created}}
           </div>
-          <div class="alert alert-info">
+          <div class="alert item-header">
             <div *ngIf="item_images != null">
               <img src={{item_images[0]?.image}} alt="800x600" border="0" class="item_image_single">
             </div>
-            <div id="item_desc">
-              <p><strong>Description: </strong>{{item_item_params?.description}}</p>
-            </div>
+          </div>
+          <div class="alert alert-info item-container">
+            <p><strong>Description: </strong>{{item_item_params?.description}}</p>
           </div>
         </div>
       </div>
@@ -25,9 +25,11 @@
       <!--Initial terms-->
       <div class="row">
         <div class="col-lg-12">
-          <div class="alert alert-info">
+          <div class="alert alert-info item-header">
+            <p><span class="glyphicon glyphicon-file"></span> <strong>Initial terms</strong></p>
+          </div>
+          <div class="alert">
             <!--Initial general inormation-->
-            <h4><span class="glyphicon glyphicon-file"></span> <strong>Initial terms</strong></h4><hr>
             <p><span class="glyphicon glyphicon-user"></span> <strong>Seller account: </strong> {{item_agreement_params?.seller_id}}</p>
             <p><span class="glyphicon glyphicon-credit-card"></span> <strong>Initial price: </strong> {{item_default_terms?.price}} SEK</p>
             <p><span class="glyphicon glyphicon-transfer"></span> <strong>Postage due within: </strong> {{item_default_terms?.postage_time}} hours</p>
@@ -217,28 +219,32 @@
 
         <!--Proposal display-->
         <div *ngFor="let terms of item_terms">
-          <div class="alert" [hidden]="terms.status != proposal_state_chosen" [ngClass]="{'alert-info': terms.status == 'PROPOSED', 'alert-danger': (terms.status == 'DENIED' || terms.status == 'INACTIVE')}">
-            <h4><span class="glyphicon glyphicon-file"></span> <strong>Proposal #{{terms.terms_id}}</strong></h4>
-            <p><span class="glyphicon glyphicon-cog"></span> <strong>Status: {{terms.status}}</strong></p>
-            <p><span class="glyphicon glyphicon-user"></span> <strong>Proposed by: </strong>{{terms.author_account}}</p>
-            <p><span class="glyphicon glyphicon-credit-card"></span> <strong>Price: </strong>{{terms.price}} SEK</p>
-            <p><span class="glyphicon glyphicon-transfer"></span> <strong>Postage due within: </strong> {{terms.postage_time}} hours</p>
-            <p> <span *ngIf="terms.accelerometer !== null" class="glyphicon glyphicon-ok"></span>
-              <span *ngIf="terms.accelerometer === null" class="glyphicon glyphicon-remove"></span>
-              <strong>Accelerometer</strong> <strong *ngIf="terms.accelerometer !== null">({{terms.accelerometer}} G)</strong></p>
-            <p> <span *ngIf="terms.pressure_low !== null" class="glyphicon glyphicon-ok"></span>
-              <span *ngIf="terms.pressure_low === null" class="glyphicon glyphicon-remove"></span>
-              <strong>Pressure sensor</strong> <strong *ngIf="terms.pressure_low !== null">({{terms.pressure_low}} to {{terms.pressure_high}} PSI)</strong></p>
-            <p> <span *ngIf="terms.humidity_low !== null" class="glyphicon glyphicon-ok"></span>
-              <span *ngIf="terms.humidity_low === null" class="glyphicon glyphicon-remove"></span>
-              <strong>Humidity sensor</strong> <strong *ngIf="terms.humidity_low !== null">({{terms.humidity_low}} to {{terms.humidity_high}} %)</strong></p>
-            <p> <span *ngIf="terms.temperature_low !== null" class="glyphicon glyphicon-ok"></span>
-              <span *ngIf="terms.temperature_low === null" class="glyphicon glyphicon-remove"></span>
-              <strong>Temperature sensor</strong> <strong *ngIf="terms.temperature_low !== null">({{terms.temperature_low}} to {{terms.temperature_high}} &#8451;)</strong></p>
-            <p> <span *ngIf="terms.gps !== 0" class="glyphicon glyphicon-ok"></span>
-              <span *ngIf="terms.humidity_low === 0" class="glyphicon glyphicon-remove"></span>
-              <strong>GPS</strong>
-            </p>
+          <div [hidden]="terms.status != proposal_state_chosen">
+            <div class="alert item-header"  [ngClass]="{'alert-info': terms.status == 'PROPOSED', 'alert-danger': (terms.status == 'DENIED' || terms.status == 'INACTIVE')}">
+              <p><span class="glyphicon glyphicon-file"></span> <strong>{{terms.terms_id}}</strong></p>
+            </div>
+            <div class="alert">
+              <p><span class="glyphicon glyphicon-cog"></span> <strong>Status: {{terms.status}}</strong></p>
+              <p><span class="glyphicon glyphicon-user"></span> <strong>Proposed by: </strong>{{terms.author_account}}</p>
+              <p><span class="glyphicon glyphicon-credit-card"></span> <strong>Price: </strong>{{terms.price}} SEK</p>
+              <p><span class="glyphicon glyphicon-transfer"></span> <strong>Postage due within: </strong> {{terms.postage_time}} hours</p>
+              <p> <span *ngIf="terms.accelerometer !== null" class="glyphicon glyphicon-ok"></span>
+                <span *ngIf="terms.accelerometer === null" class="glyphicon glyphicon-remove"></span>
+                <strong>Accelerometer</strong> <strong *ngIf="terms.accelerometer !== null">({{terms.accelerometer}} G)</strong></p>
+              <p> <span *ngIf="terms.pressure_low !== null" class="glyphicon glyphicon-ok"></span>
+                <span *ngIf="terms.pressure_low === null" class="glyphicon glyphicon-remove"></span>
+                <strong>Pressure sensor</strong> <strong *ngIf="terms.pressure_low !== null">({{terms.pressure_low}} to {{terms.pressure_high}} PSI)</strong></p>
+              <p> <span *ngIf="terms.humidity_low !== null" class="glyphicon glyphicon-ok"></span>
+                <span *ngIf="terms.humidity_low === null" class="glyphicon glyphicon-remove"></span>
+                <strong>Humidity sensor</strong> <strong *ngIf="terms.humidity_low !== null">({{terms.humidity_low}} to {{terms.humidity_high}} %)</strong></p>
+              <p> <span *ngIf="terms.temperature_low !== null" class="glyphicon glyphicon-ok"></span>
+                <span *ngIf="terms.temperature_low === null" class="glyphicon glyphicon-remove"></span>
+                <strong>Temperature sensor</strong> <strong *ngIf="terms.temperature_low !== null">({{terms.temperature_low}} to {{terms.temperature_high}} &#8451;)</strong></p>
+              <p> <span *ngIf="terms.gps !== 0" class="glyphicon glyphicon-ok"></span>
+                <span *ngIf="terms.humidity_low === 0" class="glyphicon glyphicon-remove"></span>
+                <strong>GPS</strong>
+              </p>
+            </div>
           </div>
         </div>
       </div>
