--- a/src/styles.css
+++ b/src/styles.css
@@ -39,6 +39,17 @@ agm-map {
   cursor: pointer;
 }
 
+.alert > h4 {
+  margin: 5px;
+  margin-left: 0px;
+}
+
+.top-right {
+  position: absolute;
+  top: 10px;
+  right: 27px;
+}
+
 /*============================LoginComponent============================*/
 
 .generate-menu-label {
@@ -81,6 +92,15 @@ agm-map {
 .item_image {
   max-width: 158px;
   max-height: 118px;
+}
+
+.item-header {
+  margin-bottom: 0;
+  border-bottom: none;
+}
+
+.item-container:hover {
+  margin-top: 0;
 }
 
 /*============================ItemManagerComponent============================*/
